--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
+    "@supabase/supabase-js": "^2.81.1",
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.12.2",
     "bootstrap-icons": "^1.13.1",
