Fixed backend for vector 384 and successfully deployed

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,15 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+model.ckpt
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+env/
+build//
+.eggs/
+*.egg-info/
+.installed.cfg
+*.egg
+venv/
